new proj/src/objects/GE_ES_Risk_Filter_PL_Configuration__c.object
<CustomObject>
    <description>This object allows Risk Filter Questions to set Risk Factors to Preapproved based on which P&amp;L is assigned to the opportunity.</description>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_PL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L</label>
        <referenceTo>GE_ES_PL__c</referenceTo>
        <relationshipLabel>Risk Filter P&amp;L Configurations</relationshipLabel>
        <relationshipName>Risk_Filter_P_L_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Filter_Question__c</fullName>
        <label>Risk Filter Question</label>
        <referenceTo>GE_ES_Risk_Filter_Question__c</referenceTo>
        <relationshipLabel>Risk Filter P&amp;L Configurations</relationshipLabel>
        <relationshipName>Risk_Filter_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_ES_of_Preapproved_Risk_Factors__c</fullName>
        <inlineHelpText>How many Risk Factors are Preapproved from this Risk Filter Question for this P&amp;L?</inlineHelpText>
        <label># of Preapproved Risk Factors</label>
        <summaryForeignKey>GE_ES_Preapproved_Risk_Factor__c.GE_ES_Risk_Filter_PL_Configuration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_Default_Answer__c</fullName>
        <label>Default Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_HoverText_help__c</fullName>
        <label>Hover text help</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_QuestionTextPart__c</fullName>
        <formula>IF(FIND(&apos;.&apos;, GE_ES_Risk_Filter_Question__r.GE_ES_Question_Text__c) &lt;= 4 &amp;&amp; FIND(&apos;.&apos;, GE_ES_Risk_Filter_Question__r.GE_ES_Question_Text__c)!= 0,
   RIGHT( GE_ES_Risk_Filter_Question__r.GE_ES_Question_Text__c , LEN(GE_ES_Risk_Filter_Question__r.GE_ES_Question_Text__c)- FIND(&apos;.&apos;, GE_ES_Risk_Filter_Question__r.GE_ES_Question_Text__c) ),
GE_ES_Risk_Filter_Question__r.GE_ES_Question_Text__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuestionTextPart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Risk Filter P&amp;L Configuration</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Risk Filter P&amp;L Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Filter P&amp;L Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>